mbtiles/tests/snapshots/copy__convert_cache@v1__cache.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"9ED9178D7025276336C783C2B54D6258\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v1\"  )"
    - "(  \"md-remove\", \"value - remove\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tile_cache
  sql: "CREATE TABLE tile_cache (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    fetched INTEGER,\n    expires INTEGER,\n    etag TEXT,\n    tile_data BLOB NOT NULL,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  3, 6, 7, NULL, NULL, NULL, blob(root)  )"
    - "(  5, 0, 0, NULL, NULL, NULL, blob(same)  )"
    - "(  5, 0, 1, NULL, NULL, NULL, blob()  )"
    - "(  5, 1, 1, NULL, NULL, NULL, blob(edit-v1)  )"
    - "(  5, 1, 2, NULL, NULL, NULL, blob()  )"
    - "(  5, 1, 3, NULL, NULL, NULL, blob(non-empty)  )"
    - "(  5, 2, 2, NULL, NULL, NULL, blob(remove)  )"
    - "(  5, 2, 3, NULL, NULL, NULL, blob()  )"
    - "(  6, 0, 3, NULL, NULL, NULL, blob(same)  )"
    - "(  6, 0, 5, NULL, NULL, NULL, blob(1-keep-1-rm)  )"
    - "(  6, 1, 4, NULL, NULL, NULL, blob(edit-v1)  )"
    - "(  6, 2, 6, NULL, NULL, NULL, blob(1-keep-1-rm)  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tile_cache"
  values: ~
