mbtiles/tests/snapshots/copy__convert_cache@v1__cnorm.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: cache_data
  sql: "CREATE TABLE cache_data (\n    tile_id INTEGER NOT NULL PRIMARY KEY,\n    tile_data BLOB NOT NULL\n)"
  values:
    - "(  -5881570752021442449, blob(1-keep-1-rm)  )"
    - "(  -8683204914198171888, blob(same)  )"
    - "(  3244421341483603138, blob()  )"
    - "(  5516311519509283747, blob(remove)  )"
    - "(  6314490279761160920, blob(edit-v1)  )"
    - "(  6465868677957899877, blob(non-empty)  )"
    - "(  746744014776526199, blob(root)  )"
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"9ED9178D7025276336C783C2B54D6258\"  )"
    - "(  \"md-edit\", \"value - v1\"  )"
    - "(  \"md-remove\", \"value - remove\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tile_cache
  sql: "CREATE TABLE tile_cache (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    fetched INTEGER,\n    expires INTEGER,\n    etag TEXT,\n    tile_id INTEGER NOT NULL,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  3, 6, 7, NULL, NULL, NULL, 746744014776526199  )"
    - "(  5, 0, 0, NULL, NULL, NULL, -8683204914198171888  )"
    - "(  5, 0, 1, NULL, NULL, NULL, 3244421341483603138  )"
    - "(  5, 1, 1, NULL, NULL, NULL, 6314490279761160920  )"
    - "(  5, 1, 2, NULL, NULL, NULL, 3244421341483603138  )"
    - "(  5, 1, 3, NULL, NULL, NULL, 6465868677957899877  )"
    - "(  5, 2, 2, NULL, NULL, NULL, 5516311519509283747  )"
    - "(  5, 2, 3, NULL, NULL, NULL, 3244421341483603138  )"
    - "(  6, 0, 3, NULL, NULL, NULL, -8683204914198171888  )"
    - "(  6, 0, 5, NULL, NULL, NULL, -5881570752021442449  )"
    - "(  6, 1, 4, NULL, NULL, NULL, 6314490279761160920  )"
    - "(  6, 2, 6, NULL, NULL, NULL, -5881570752021442449  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tile_cache.zoom_level,\n    tile_cache.tile_column,\n    tile_cache.tile_row,\n    cache_data.tile_data\nFROM\n    tile_cache INNER JOIN cache_data\n    ON tile_cache.tile_id = cache_data.tile_id"
  values: ~
